basic calendar view implemented

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,20 +12,22 @@
   <body style="height:100vh">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">ThrowbackCalendar</a>
+            <a class="navbar-brand" href="{{ url_for('index') }}">ThrowbackCalendar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="#">One</a>
+                    <a class="nav-link" aria-current="page" href="{{ url_for('show_month', month=(current_month.month-1)) }}"><i class="fa-solid fa-caret-left"></i></a>
                   </li>
+                  {% for month in range(1,13) %}
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Two</a>
+                      <a class="nav-link" aria-current="page" href="{{ url_for('show_month', month=month) }}">{{ month | monthname }}</a>
                   </li>
+                  {% endfor %}
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Three</a>
+                    <a class="nav-link" aria-current="page" href="{{ url_for('show_month', month=(current_month.month+1)) }}"><i class="fa-solid fa-caret-right"></i></a>
                   </li>
               </ul>
             </div>
