--- a/templates/index.html
+++ b/templates/index.html
@@ -14,15 +14,23 @@
     </div>
 <div class="row">
 {% for day in range(1, days_in_month + 1) %}
-<div class="col mb-2">
+<div class="col mb-2 card-group">
     <div class="day card{% if day == now.day and current_month.month == now.month %} border-primary{% endif %}">
-        <div class="card-header">
+        <div class="card-header text-end">
         {{ day }}
         </div>
         <ul class="list-group list-group-flush">
             {% for year in events[day] %}
             <li class="list-group-item">
-            {{ year }}
+            <div class="fw-bold">{{ year }}</div>
+            <ul class="group list-group-flush px-0">
+            {% for event in events[day][year] %}
+            <li class="list-group-item d-flex justify-content-between align-items-center px-0 align-top" title="{{ event.description }}">
+                {{ event.name }}
+                {% if event.url %}<span class="text-primary"><a href="{{ event.url }}" class=""><i class="fa-solid fa-globe"></i></a></span>{% endif %}
+            </li>
+            {% endfor %}
+            </ul>
             </li>
             {% endfor %}
         </ul>
