added new event button per day

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link href="{{ url_for('static', filename='css/fontawesome.min.css') }}" rel="stylesheet" crossorigin="" />
     <link href="{{ url_for('static', filename='css/brands.min.css') }}" rel="stylesheet" crossorigin="" />
     <link href="{{ url_for('static', filename='css/solid.min.css') }}" rel="stylesheet" crossorigin="" />
+    <link href="{{ url_for('static', filename='css/ThrowbackCalendar.css') }}" rel="stylesheet" crossorigin="" />
   </head>
   <body style="height:100vh">
     <nav class="navbar navbar-expand-lg bg-primary mb-3" data-bs-theme="dark">
