--- a/static/css/ThrowbackCalendar.css
+++ b/static/css/ThrowbackCalendar.css
@@ -5,3 +5,26 @@
 .day:hover .card-header .btn {
     visibility: visible;
 }
+
+/*** Login form ***/
+
+.form-login {
+    max-width: 330px;
+    padding: 1rem;
+}
+  
+.form-login .form-floating:focus-within {
+    z-index: 2;
+}
+  
+.form-login input[type="email"] {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
+  
+.form-login input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
